(fix) O3-5436: Align test result columns in the Visits Tests tab (#3033)

--- a/packages/esm-patient-tests-app/src/test-results/overview/common-datatable.scss
+++ b/packages/esm-patient-tests-app/src/test-results/overview/common-datatable.scss
@@ -24,6 +24,23 @@
   }
 }
 
+.table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+.col-name {
+  width: 50%;
+}
+
+.col-value {
+  width: 25%;
+}
+
+.col-range {
+  width: 25%;
+}
+
 .offScaleHigh,
 .offScaleLow,
 .criticallyHigh,
